--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,10 @@
     transform-style: preserve-3d;
 }
 
+%disable-user-control {
+    pointer-events: none;
+}
+
 %hover-cell-empty {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
     opacity: 0.8;
@@ -70,6 +74,10 @@ $wrapper-matrix-size: ($matrix-box-square-size * 3) + ($matrix-box-separation * 
     &__cell-box:active,
     &__cell--fill {
         background-color: $matrix-box-background-fill;
+        @extend %disable-user-control;
+    }
+
+    &__cell--fill {
         cursor: not-allowed;
     }
 
