--- a/scss/_mixinsAndPlaceholders.scss
+++ b/scss/_mixinsAndPlaceholders.scss
@@ -46,4 +46,6 @@
     height: $h;
     top: $t;
     left: $l;
+    border-width: 0;
+    border-image: url("http://www.norabrowndesign.com/css-experiments/images/border5.png") 8% repeat;
 }
