on winner reset line stroke status cell

--- a/scss/_mixinsAndPlaceholders.scss
+++ b/scss/_mixinsAndPlaceholders.scss
@@ -47,5 +47,5 @@
     top: $t;
     left: $l;
     border-width: 0;
-    border-image: url("http://www.norabrowndesign.com/css-experiments/images/border5.png") 8% repeat;
+    border-image: url("../images/border-winner-cell.png") 8% repeat;
 }
