for config game, main style layout

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,6 +58,10 @@
     }
 }
 
+#config-game-actions {
+    text-align: center;
+}
+
 .ia-matrix-game {
     margin: $matrix-margin-top auto 0;
     text-align: center;
