Popup winner game, refresh game button actions

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@ $black-blur-bgd-color: rgba(#3F51B5, 0.9);
 $warning-font-color: #DB1600;
 $waiting-z-index: 5;
 $above-z-index: 10;
-$matrix-margin-top: 50px;
+$matrix-margin-top: 20px;
 $matrix-box-square-size: 100px;
 $matrix-box-square-size-medium: 60px;
 $matrix-box-border: 1px solid #8C9EFF;
@@ -14,6 +14,7 @@ $matrix-game-rules-width: 500px;
 $matrix-game-rules-height: 370px;
 $matrix-game-rules-first-margin-top: 35px;
 $matrix-game-rules-font-size: 16px;
+$matrix-game-footer-pagging-hztl: 20px;
 
 // Mached winner Cells
 $game-match-cell-border-offset: 3px;
