--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,16 +19,25 @@ body, html {
     }
 }
 
-.mdl-mini-footer {
+.mdl-mini-footer.ia-main-footer {
     bottom: 0;
-    padding: 20px;
     position: fixed;
     width: 100%;
     z-index: $above-z-index;
+    align-items: center;
+    padding: 20px 0;
 
     .mdl-logo {
         line-height: 1;
         margin: 0;
+    }
+
+    .mdl-mini-footer__left-section{
+        padding-left: $matrix-game-footer-pagging-hztl;
+    }
+
+    .mdl-mini-footer__right-section{
+        padding-right: $matrix-game-footer-pagging-hztl;
     }
 }
 
@@ -125,10 +134,22 @@ body, html {
     @import 'statusCell';
 }
 
-.demo-card-image {
-    margin: $matrix-game-rules-top auto 0;
+.ia-winner-card,
+.ia-rules-card {
     opacity: 0;
     visibility: hidden;
+    position: absolute; // hide outside html flow
+    top: 0;
+
+    &.show--poup{
+        @extend %transition-smooth;
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+.ia-rules-card {
+    margin: $matrix-game-rules-top auto 0;
     width: 100%;
 
     ul {
@@ -145,10 +166,8 @@ body, html {
         }
     }
 
-    &.show--rules{
-        @extend %transition-smooth;
-        opacity: 1;
-        visibility: visible;
+    &.show--poup{
+        position: relative;
     }
 
     &.mdl-card {
@@ -196,3 +215,41 @@ body, html {
         paddin-right: 0;
     }
  }
+
+.ia-winner-card {
+    &.show--poup{
+        position: fixed;
+    }
+
+    $size-card: 260px;
+    &.mdl-card {
+        background: #3E4EB8;
+        margin-top: -200px;
+        top: 100%;
+        height: 200px;
+        left: 50%;
+        margin-left: - ($size-card / 2);
+        width: $size-card;
+    }
+
+    .mdl-card__actions {
+        border-color: rgba(255, 255, 255, 0.2);
+        box-sizing:border-box;
+        display: flex;
+        align-items: center;
+    }
+
+    .mdl-card__title {
+        align-items: flex-start;
+    }
+
+    .mdl-card__title > h4 {
+        margin-top: 0;
+    }
+
+    .mdl-card__title,
+    .mdl-card__actions,
+    .mdl-card__actions > .mdl-button {
+        color: #fff;
+    }
+}
