Badgets to winner counter

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,8 @@
-$media-medium-width: 400px;
-$black-blur-bgd-color: rgba(#3F51B5, 0.9);
+$primary-bgd-color: #3F51B5;
+$primary-dark-bgd-color: #3E4EB8;
 $warning-font-color: #DB1600;
+$monocolor01: #fff;
+$media-medium-width: 400px;
 $waiting-z-index: 5;
 $above-z-index: 10;
 $matrix-margin-top: 20px;
