--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,7 +48,7 @@ body, html {
     -webkit-user-select: none;
 
     &:before {
-        background: rgba(#fff, 0.8);
+        background: rgba($monocolor01, 0.8);
         content: '';
         display: block;
         height: 100%;
@@ -140,6 +140,7 @@ body, html {
     visibility: hidden;
     position: absolute; // hide outside html flow
     top: 0;
+    z-index: $above-z-index;
 
     &.show--poup{
         @extend %transition-smooth;
@@ -184,14 +185,14 @@ body, html {
     }
 
     & > .mdl-card__actions {
-        background: $black-blur-bgd-color;
+        background: rgba($primary-bgd-color, 0.9);
         color: white;
         height: 52px;
         padding: 16px;
     }
 
     &__filename {
-        color: #fff;
+        color: $monocolor01;
         font-size: 14px;
         font-weight: 500;
     }
@@ -208,7 +209,7 @@ body, html {
     }
 
     .mdl-card__supporting-text {
-        background-color: rgba(#fff, 0.9);
+        background-color: rgba($monocolor01, 0.9);
         color: black;
         padding-left: 0;
         width: 100%;
@@ -223,7 +224,7 @@ body, html {
 
     $size-card: 260px;
     &.mdl-card {
-        background: #3E4EB8;
+        background: $primary-dark-bgd-color;
         margin-top: -200px;
         top: 100%;
         height: 200px;
@@ -250,6 +251,50 @@ body, html {
     .mdl-card__title,
     .mdl-card__actions,
     .mdl-card__actions > .mdl-button {
-        color: #fff;
+        color: $monocolor01;
+    }
+}
+
+
+.ia-gamer-badges {
+    position: fixed;
+    top: 100%;
+    margin-top: -140px;
+    text-align: center;
+    width: 100%;
+
+    .snippet-demo {
+        display: inline-block;
+
+        &:first-child {
+            margin-bottom: 50px;
+        }
+    }
+
+    .mdl-badge {
+        color: $primary-bgd-color;
+        font-size: 40px;
+
+        &:after {
+            right: -5px;
+        }
+    }
+
+    @media screen and (min-width: $media-medium-width) {
+        top: 50%;
+        margin-top: -90px;
+        width: auto;
+
+        .snippet-demo {
+            display: block;
+        }
+
+        .mdl-badge {
+            font-size: 50px;
+
+            &:after {
+                right: -15px;
+            }
+        }
     }
 }
