--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,8 @@
 $primary-bgd-color: #3F51B5;
+$accent-bgd-color: #ff4081;
+$accent-dark-bgd-color: #E91E63;
 $primary-dark-bgd-color: #3E4EB8;
+$primary-soft-bgd-color: #536DFE;
 $warning-font-color: #DB1600;
 $monocolor01: #fff;
 $media-medium-width: 400px;
@@ -9,7 +12,7 @@ $matrix-margin-top: 20px;
 $matrix-box-square-size: 100px;
 $matrix-box-square-size-medium: 60px;
 $matrix-box-border: 1px solid #8C9EFF;
-$matrix-box-border-fill: 1px solid #536DFE;
+$matrix-box-border-fill: 1px solid $primary-soft-bgd-color;
 $matrix-box-separation: 10px;
 $matrix-game-rules-top: 25px;
 $matrix-game-rules-width: 500px;
