--- a/scss/main.scss
+++ b/scss/main.scss
@@ -225,9 +225,8 @@ body, html {
     $size-card: 260px;
     &.mdl-card {
         background: $primary-dark-bgd-color;
-        margin-top: -200px;
+        margin-top: -220px;
         top: 100%;
-        height: 200px;
         left: 50%;
         margin-left: - ($size-card / 2);
         width: $size-card;
@@ -242,10 +241,12 @@ body, html {
 
     .mdl-card__title {
         align-items: flex-start;
+        animation: animation-background-lite 5s infinite;
     }
 
     .mdl-card__title > h4 {
         margin-top: 0;
+        background-color: inherit;
     }
 
     .mdl-card__title,
